--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,19 +10,20 @@ services:
       - ./martin/tiles:/tiles
       - ./martin/sprites:/sprites
     command: ["--config", "/config.yaml"]
+    healthcheck:
+      disable: true 
 
   nginx:
     image: nginx:latest
-    container_name: nginx
-    restart: always
+    restart: unless-stopped
     ports:
       - "80:80"
-    depends_on:
-      - martin
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./martin/sprites:/usr/share/nginx/html/sprites
       - nginx_cache:/var/cache/nginx
+    depends_on:
+      - martin
+    entrypoint: /bin/sh -c "rm -rf /var/cache/nginx/* && exec /docker-entrypoint.sh nginx -g 'daemon off;'"
 
 volumes:
   nginx_cache:
