--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,20 +4,30 @@ services:
     container_name: martin
     restart: always
     ports:
-      - "3000:3000"
+      - "3001:3000"
     volumes:
       - ./martin/config.yaml:/config.yaml
       - ./martin/tiles:/tiles
       - ./martin/sprites:/sprites
     command: ["--config", "/config.yaml"]
     healthcheck:
-      disable: true 
+      test:
+        - CMD
+        - /bin/sh
+        - -c
+        - 'wget --spider http://127.0.0.1:3000/health || exit 1'
+      interval: 30s
+      retries: 3
+      timeout: 10s
+      start_period: 30s
 
   nginx:
     image: nginx:latest
     restart: unless-stopped
     ports:
-      - "80:80"
+      - "3000:80"
+    environment:
+      - SERVICE_FQDN_NGINX_3000
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - nginx_cache:/var/cache/nginx
