--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,15 @@
-name: Build & Publish Martin Image
+name: Build & Deploy Martin
 
 on:
   push:
-    branches: [ main ]
+    branches: ["main"]
 
 jobs:
-  build:
+  build-deploy:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: read
+      contents: write
       packages: write
 
     steps:
@@ -23,9 +23,37 @@ jobs:
 
       - name: Build image
         run: |
-          docker build \
-            -t ghcr.io/${{ github.repository_owner }}/martin:latest .
+          VERSION=$(date +%Y%m%d%H%M%S)
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          docker build -t ghcr.io/${{ github.repository_owner }}/martin:$VERSION .
+          docker tag ghcr.io/${{ github.repository_owner }}/martin:$VERSION ghcr.io/${{ github.repository_owner }}/martin:latest
 
       - name: Push image
         run: |
+          docker push ghcr.io/${{ github.repository_owner }}/martin:$VERSION
           docker push ghcr.io/${{ github.repository_owner }}/martin:latest
+
+      - name: Clone infra repo
+        run: |
+          git clone https://github.com/${{ github.repository_owner }}/infra.git
+          cd infra
+
+      - name: Update martin deployment image tag
+        run: |
+          cd infra/apps/services/martin
+          sed -i "s|image: ghcr.io.*/martin.*|image: ghcr.io/${{ github.repository_owner }}/martin:$VERSION|" deployment.yaml
+
+      - name: Commit manifest change
+        run: |
+          cd infra
+          git config user.name "ci-bot"
+          git config user.email "ci-bot@github.com"
+          git add .
+          git commit -m "deploy: martin $VERSION"
+          git push
+        env:
+          GIT_AUTHOR_NAME: ci-bot
+          GIT_AUTHOR_EMAIL: ci-bot@github.com
+          GIT_COMMITTER_NAME: ci-bot
+          GIT_COMMITTER_EMAIL: ci-bot@github.com
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
