--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,8 +35,7 @@ jobs:
 
       - name: Clone infra repo
         run: |
-          git clone https://github.com/${{ github.repository_owner }}/infra.git
-          cd infra
+          git clone https://ci-bot:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository_owner }}/infra.git
 
       - name: Update martin deployment image tag
         run: |
@@ -48,12 +47,15 @@ jobs:
           cd infra
           git config user.name "ci-bot"
           git config user.email "ci-bot@github.com"
+
+          # (optionnel mais safe) s'assurer que le remote utilise bien le PAT
+          git remote set-url origin https://ci-bot:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository_owner }}/infra.git
+
           git add .
-          git commit -m "deploy: martin $VERSION"
-          git push
+          git commit -m "deploy: martin $VERSION" || echo "No changes to commit"
+          git push origin main
         env:
           GIT_AUTHOR_NAME: ci-bot
           GIT_AUTHOR_EMAIL: ci-bot@github.com
           GIT_COMMITTER_NAME: ci-bot
           GIT_COMMITTER_EMAIL: ci-bot@github.com
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
